--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "angular-ui-router": "^1.0.30",
     "bootstrap": "^5.3.8",
-    "remixicon": "^4.7.0"
+    "remixicon": "^4.7.0",
+    "sweetalert2": "^11.26.3"
   }
 }
